--- a/login.html
+++ b/login.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Login de Facebook chevere</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
+
+<div class="container" style="margin-top: 40px;">
+    <h1>Ingresa al facebook chevere</h1>
+    <hr>
+</div>
+<div class="container">
+    <div class="col-4 border bg-light" style="margin: 10% auto;" >
+        <div class="my-4 mx-3 ">
+            <form action="login.js">
+                <label for="usuario" class="form-label">Tu username</label>
+                <input class="form-control form-control-lg" id="usuario" type="text" placeholder="Usuario"
+                       aria-label=".form-control-lg example">
+                <label for="password" class="form-label">Tu password</label>
+                <input class="form-control form-control-lg " type="password" id="password" placeholder="Password"
+                       aria-label=".form-control-lg example">
+                <input class="btn btn-primary" type="submit" value="Ingresar">
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
 
 </body>
 </html>
